[package]
name = "mptcp-hello-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
socket2 = { git = "https://github.com/rust-lang/socket2" }
tokio = { version = "1.21", features = ["full"] }